# Todo_Ai-App

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_and_task_tables.py  002_add_conversation_message_tables.py  003_add_task_enhancements.py  004_add_user_display_name.py  005_add_phase5_features.py  006_add_user_notification_preferences.py
backend/dapr/components/: cron-reminder.yaml  pubsub.yaml  subscriptions.yaml
backend/src/: config.py  main.py
backend/src/agent/: __init__.py  config.py  prompts.py
backend/src/api/: audit.py  auth.py  chat.py  deps.py  events.py  notifications.py  tasks.py
backend/src/db/: __init__.py  session.py
backend/src/events/: __init__.py  consumers.py  producers.py
backend/src/mcp/: __init__.py  tools.py
backend/src/models/: __init__.py  audit.py  conversation.py  message.py  notification.py  task.py  user.py
backend/src/repositories/: __init__.py  audit_repository.py  conversation_repository.py  notification_repository.py  task_repository.py  user_repository.py
backend/src/services/: __init__.py  audit_service.py  auth_service.py  chat_service.py  notification_service.py  reminder_service.py  task_service.py  user_preferences_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_chat_api.py  test_tasks_api.py
backend/tests/unit/: test_auth_service.py  test_conversation_repository.py  test_mcp_tools.py  test_task_service.py
docs/: phase4-kubernetes.md
frontend/: .dockerignore  .env.local.example  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
helm/todo-app/: .helmignore  Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
scripts/: deploy-minikube.sh
specs/001-console-todo-app/: data-model.md  (+5 more)
src/: __init__.py
tests/: __init__.py
(+179 files in other folders)
