[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-app"
version = "0.1.0"
description = "Phase 1: In-Memory Console Todo App - Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.cli.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
